--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://souvik2k21.github.io/CodeClauseInternship_Timer-and-Stopwatch",
+  "homepage": "https://souvik2k21.github.io/Timer-and-Stopwatch",
   "name": "timer_stopwatch",
   "version": "0.1.0",
   "private": true,
